// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EngineerVacancies  renders as expected with required props 1`] = `
<div
  className="w-100"
>
  <div
    className="vacancies-container--all-vacancies"
  >
    <div
      className="render-vacancies__div"
    >
      <EngineerVacancyCard
        closingDate="2019-07-10 07:58:34"
        hasApplied={false}
        projectId={1}
        projectName="Dolorum suscipit molestiae."
        role="Engineer"
        roleId={1}
        slots={1}
        startDate="2019-08-10 07:58:34"
      />
      <EngineerVacancyCard
        closingDate="2019-07-10 07:58:34"
        hasApplied={false}
        projectId={null}
        projectName="Certification"
        role="Mrs. Alanna Ziemann"
        roleId={1}
        slots={2}
        startDate="2019-08-10 07:58:34"
      />
    </div>
  </div>
</div>
`;

exports[`EngineerVacancies  renders as expected with required props 2`] = `
<div
  className="w-100"
>
  <div
    className="vacancies-container--all-vacancies"
  >
    <div
      className="render-vacancies__div"
    >
      <EngineerVacancyCard
        closingDate="2019-07-10 07:58:34"
        hasApplied={false}
        projectId={1}
        projectName="Dolorum suscipit molestiae."
        role="Engineer"
        roleId={1}
        slots={1}
        startDate="2019-08-10 07:58:34"
      />
      <EngineerVacancyCard
        closingDate="2019-07-10 07:58:34"
        hasApplied={false}
        projectId={null}
        projectName="Certification"
        role="Mrs. Alanna Ziemann"
        roleId={1}
        slots={0}
        startDate="2019-08-10 07:58:34"
      />
    </div>
  </div>
</div>
`;
